--- a/client/src/RecipesList/RecipesList.css
+++ b/client/src/RecipesList/RecipesList.css
@@ -1,7 +1,10 @@
 .RecipesList {
 	width: calc(100% - 80px);
 	margin: auto;
-	display: grid;
+	/* display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	grid-gap: 40px;
+	grid-gap: 40px; */
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
 }
