--- a/client/src/Header/Header.css
+++ b/client/src/Header/Header.css
@@ -5,6 +5,15 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	background-color: rgb(173, 20, 0);
-	color: #fff;
+	background-color: rgb(0, 0, 0);
+	color: white;
+	margin-bottom: 10px;
+}
+
+a:link {
+	color: rgb(0, 0, 0);
+}
+
+a:visited {
+	color: green;
 }
