fix footer positioning, make recipe cards clickable

--- a/client/src/RecipeCard/RecipeCard.css
+++ b/client/src/RecipeCard/RecipeCard.css
@@ -1,12 +1,12 @@
-.RecipeCard {
-	width: 32%;
+a.RecipeCardLink {
 	text-align: center;
 	border-style: solid;
 	border-width: 1px;
 	margin: 2px;
+	width: 32%;
 }
 
-a:link {
+a.RecipeCardLink:link {
 	text-decoration: none;
 }
 
