--- a/client/src/Header/Header.css
+++ b/client/src/Header/Header.css
@@ -5,16 +5,16 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	background-color: rgb(0, 0, 0);
 	color: white;
 	margin-bottom: 10px;
 	padding-bottom: 5px;
 }
 
-a:link {
-	color: rgb(0, 0, 0);
+.Header a:link {
+	color: #ffcc66;
+	text-decoration: none;
 }
 
-a:visited {
-	color: green;
+.Header a:visited {
+	color: #ffcc66;
 }
