--- a/client/src/RecipesList/RecipesList.css
+++ b/client/src/RecipesList/RecipesList.css
@@ -1,6 +1,8 @@
 .RecipesList {
-	width: calc(100% - 50px);
+	/* width: calc(100% - 100px); */
+	max-width: 75%;
 	margin: auto;
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: center;
 }
